added page base structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <div class="Main">
         <h1>Привет</h1>
+        <div class="page-part"></div>
+        <div class="page-part"></div>
+        <div class="page-part"></div>
+        <div class="page-part"></div>
+        <div class="page-part"></div>
     </div>
 </body>
 </html>
